feat: Critical Security Fixes for Production Readiness
- Replace panic! with proper ZthfsError returns in integrity.rs
- Replace unwrap() calls with proper error handling in encryption.rs
- Add validate_for_production() method to detect insecure keys
- Add production feature flag for compile-time safety checks
- Fix root privilege bypass with zero-trust policy option
- Add audit logging for root access events
- Enhance CLI validate command with production safety checks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "zthfs"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+# Enable production mode with additional security checks
+production = []
+
 [dependencies]
 fuser = "0.16.0"
 aes-gcm = "0.10"
