--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,11 @@ sled="0.34.7"
 subtle = "2.6"
 # Serialization for WAL
 bincode = "1.3"
+# Secure passphrase-based key derivation
+argon2 = "0.5"
+# HMAC signing for integrity checksums
+hmac = "0.12"
+sha2 = "0.10"
 
 [dev-dependencies]
 tempfile = "3.0"
